Version 2.6
---------
 * Fix IndexError exception if auth file is used in qemu uri (#167)
 * Credential function for libvirt must return integer: fix NoneType
 exception if actual libvirt authentication is required.
 * Update README regards OVIRT/RHEV/OLVM (no mechanism available: No worthy
 mechs found)


Version 2.5
---------
 * Move some log messages from info to debug loglevel
 * Log information about libnbd version only once
 * Catch command not found error during remote backup if qemu-img
 is missing: change loglevel to warning.
 * Catch command not found error during remote restore: fail with
 proper error message.
 * If no qcow image info has been created during backup, issue warning
 during restore that default options are used.
 * Update README: add note about scratch files.
 * Do not attempt to freeze filesystems if virtual machine is in paused state
 (#166)


Version 2.4
---------
 * Update RADME
 * Add qemu-utils to package dependencies: if installed on a system without
 libvirt/qemu, backup fails because of missing qemu-img executable.
 * Add openssh-client to package dependencies: required for remote libvirtd
 connection.
 * Catch exception if executed commands such as qemu-img are missing on
 system.
 * Code cleanup

Version 2.3
---------
 * Update README
 * Add option -S (--start-domain): if specified and virtual domain is offline
 during backup, domain will be started in pause mode, allowing to execute
 full/diff/inc backups. Domain is destroyed as soon as operation finished
 by using libvirt's AUTODESTROY flag. (#164)
 * Move code for preflight tests to separate module.

Version 2.2
---------
 * Fix Progressbar during restore: wrong values used. (#160)
 * Catch exception if during restore connection to NBD server fails (#163)
 * Provide better info message what NBD connection is waiting for.
 * Call flush() on NBD connection during restore: restore of domains
 with multiple disks could fail with NbdConnectionTimeout due to race
 condition (#163)